[package]
name = "rocket"
version = "0.1.6"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = """
Web framework for nightly with a focus on ease-of-use, expressability, and
speed.
"""
documentation = "https://api.rocket.rs/rocket/"
homepage = "https://rocket.rs"
repository = "https://github.com/SergioBenitez/Rocket"
readme = "../README.md"
keywords = ["rocket", "web", "framework", "server"]
license = "MIT/Apache-2.0"

[dependencies]
term-painter = "^0.2"
log = "^0.3"
url = "^1"
hyper = { version = "=0.9.14", default-features = false }
toml = { version = "^0.2", default-features = false }
# cookie = "^0.3"

[dev-dependencies]
lazy_static = "0.2"
rocket_codegen = { version = "0.1.6", path = "../codegen" }

[features]
testing = []
